@@ -40,9 +40,23 @@ end
 
 function global_data.check_should_load()
   local sync_data = global.sync_data or { active_mods = {}, settings = {} }
-  return global.prototypes
+
+  if
+    global.prototypes
     and table.deep_compare(sync_data.active_mods, script.active_mods)
     and table.deep_compare(sync_data.settings, settings.startup)
+  then
+    for _, prototypes in pairs(global.prototypes) do
+      for _, prototype in pairs(prototypes) do
+        if not prototype.valid then
+          return false
+        end
+      end
+    end
+    return true
+  end
+
+  return false
 end
 
 return global_data
